--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -20,7 +21,9 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "rollup": "^3.22.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
