--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
+    "ot": "github:Operational-Transformation/ot.js",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "rollup": "^3.22.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
